# fc.qemu

./: .gitignore  .hgignore  .pre-commit-config.yaml  CHANGES.txt  HACKING.txt  MANIFEST.in  README.md  README.txt  ROADMAP  Vagrantfile  bootstrap-ceph.sh  bootstrap-qemu.sh  bootstrap.sh  buildout.cfg  ceph.nix  consul-fc-qemu-watcher.json  consul.nix  default.nix  directory-to-consul.py  fc-qemu.conf  fix-vagrant-time.sh  foobar00.cfg  old-code.py  prepare-apt.sh  provision-host1.nix  provision-host2.nix  provision.nix  pyproject.toml  pytest.ini  requirements.txt  setup.py  shell.nix  test-migration.sh  test.nix  test00.cfg  versions.cfg
.zed/: settings.json
batou/: requirements.txt
batou/components/ceph/: ceph.nix  component.py
batou/components/kvm/: component.py  kvm.nix
batou/components/nixos/: base.nix  component.py
batou/components/tests/: component.py  fakedirectory.py  tests.nix
batou/environments/dev/: environment.cfg  provision.sh
dev-support/: build-package  consul-fc-qemu-watcher.json  create-vm  fc-qemu.conf  root-private-key  shrink-vm  test00.cfg
manifests/: default.pp
share/iproute2/: rt_protos
src/fc/livemig/: __init__.py  config.py  incomingapi.py  incomingvm.py  monitor.py  outgoingvm.py  timeout.py
src/fc/livemig/tests/: vm_test.py
src/fc/qemu/: __init__.py  agent.py  aramaki.py  conftest.py  default.conf  directory.py  ellipsis.py  exc.py  incoming.py  incomingapi.py  incomingvm.py  lock.py  logging.py  main.py  manager.py  monitor.py  outgoing.py  outgoingvm.py  qemu.vm.cfg.in  sysconfig.py  timeout.py  util.py  vm.py
src/fc/qemu/hazmat/: ceph.py  conftest.py  cpuscan.py  guestagent.py  libceph.py  lock.py  monitor.py  qemu.py  qmp.py  supervise.py  volume.py
src/fc/qemu/hazmat/tests/: guestagent_test.py  monitor_test.py  test_ceph.py  test_cpuscan.py  test_qemu.py  test_volume.py
src/fc/qemu/tests/: agent_test.py  incoming_test.py  monitor_test.py  outgoing_test.py  qemu_test.py  test_binenv.py  test_consul.py  test_locks.py  test_logging.py  test_migration.py  test_timeout.py  util_test.py  vm_test.py
src/fc/qemu/tests/fixtures/: simplevm.yaml
src/fc/qemu/tests/fixtures/conf.d/: kvm.testvm
tests/: conftest.py  test_agent.py  test_aramaki.py  test_binenv.py  test_consul.py  test_incoming.py  test_logging.py  test_migration.py  test_outgoing.py  test_qemu.py  test_timeout.py  test_util.py  test_vm.py
tests/fixtures/: simplepubvm.yaml  simplevm.yaml
tests/hazmat/: conftest.py  test_ceph.py  test_cpuscan.py  test_guestagent.py  test_libceph.py  test_qemu.py  test_volume.py
