[project]
name = "fc.qemu"
version = "1.8.dev0"

description = "Qemu VM management utilities"
authors = [
  {name = "Flying Circus IO GmbH <mail@flyingcircus.io>", email = "mail@flyingcircus.io" }
]

requires-python = "==3.11.*"
# NOTE: Please keep this sorted!
dependencies = [
    "colorama",  # ==0.3.3',
    "consulate", # >= 1.1.0
    "psutil",  # ==5.4.2',
    "PyYaml>=5.3.1",
    "requests",  # ==2.11.1',
    "setuptools",
    "structlog>=16.1.0",
    "websockets>=13.1",
    "rfc8785>=0.1.4"
]
# NOTE: Please keep this sorted!

[tool.uv.sources]
consulate = { git = "https://github.com/flyingcircusio/consulate", rev = "90e46a4f307e281bf0e050d510fa367fd2826a2f" }

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["fc.qemu", "fc.qemu.hazmat"]

[dependency-groups]
# NOTE: Please keep this sorted!
dev = [
    "pytest-patterns",
    "pytest-profiling",
    "pytest",
    "mock",
    "pytest-cov",
    "pytest-timeout",
    "pytest-flakefinder"
]
# NOTE: Please keep this sorted!

[project.scripts]
# NOTE: Please keep this sorted!
fc-qemu = "fc.qemu.main:main"
supervised-qemu = "fc.qemu.hazmat.supervise:main"

# NOTE: Please keep this sorted!

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80

[tool.zest-releaser]
version-levels = 3
history-file = "CHANGES.txt"
register = false
release = false

[tool.scriv]
format = "rst"
fragment_directory = "CHANGES.d"
output_file = "CHANGES.txt"
version = "unreleased"
entry_title_template = ""
rst_header_chars = "-~"
insert_marker = "- Nothing changed yet."
categories = ""
